# TheJITICouncil

./: .gitignore  README.md  debug_ollama.py  pyproject.toml  test_import.py  verify_jiti.py
src/jiti/: __init__.py  core.py  council.py  holocron.py
src/jiti/tools/: freeze.py
