[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jiti"
version = "0.1.0"
description = "Just-In-Time Implementation Council: Vibe coding for production."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "JinParkmida", email = "your.email@example.com"}
]
dependencies = [
  "ollama",
  "requests",
  "rich",
]

[project.urls]
Repository = "https://github.com/JinParkmida/TheJITICouncil"

[tool.setuptools.packages.find]
where = ["src"]
